# h5rd

./: .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md
include/h5rd/: DataSet.h  DataSetCompression.h  DataSetType.h  DataSpace.h  Exception.h  File.h  Filter.h  Group.h  Node.h  Object.h  PropertyList.h  VLENDataSet.h  blosc.h  common.h  h5rd.h
include/h5rd/_old/: DataSetType.h  DataSpace.h  H5Types.h  Object.h
include/h5rd/_old/bits/: File_bits.h  String_utils.h  Util_bits.h
include/h5rd/detail/: DataSetType_detail.h  DataSet_detail.h  DataSpace_detail.h  File_detail.h  Filter_detail.h  Group_detail.h  Node_detail.h  Object_detail.h  PropertyList_detail.h  String_utils.h  VLENDataSet_detail.h
include/h5readdy/: DataSet.h  DataSetType.h  File.h  Group.h  H5Types.h  PropertyList.h  h5readdy.h  traits.h
include/h5readdy/bits/: DataSetType_bits.h  DataSet_bits.h  DataSpace_bits.h  Group_bits.h
tests/: CMakeLists.txt  Sanity.cpp  TestMain.cpp  main.cpp
